Fix sidebar alignment issue

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -223,6 +223,7 @@ noscript #item-actions, noscript #collection-actions {
 	border: none;
 	background: none;
 	margin-bottom: 0;
+	margin-right: -2px;
 	padding: 0px 2px 0 0;
 	.box-header {
 		background-color: #e8e8e8;
